styles.css
/* Reset some default styles */
html {
    font-size: 16px;
    box-sizing: border-box;
    scroll-behavior: smooth;
}

*, *::before, *::after {
    box-sizing: inherit;
    padding: 0;
    margin: 0;
}

body {
    font-family: 'Inter', sans-serif;
}

h1, h2, h3 {
    font-family: 'Archivo Black', sans-serif;
}

.section-title {
    font-size: 2rem;
    margin-bottom: 20px;
    text-align: center;
}

.call-to-action {
    background-color: #BA2500;
    color: #fff;
    border: none;
    padding: 10px 20px;
    font-size: 1rem;
    font-weight: bold;
    cursor: pointer;
    border-radius: 5px;
    width: 50%;
}

.call-to-action:hover {
    background-color: #8f1c00;
    transition: background-color 0.3s ease;
}

/* Navigation Bar */

#nav-bar-container {
    position: sticky;
    top: 0;
    width: 100%;
    background-color: #fff;
    height: 60px;
    border: 1px solid #ddd;
    z-index: 1000;
}

.nav-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 20px;
    height: 100%;
}

.nav-links {
    display: none;
}

img.hamburger-menu {
    display: block;
    cursor: pointer;
    width: 40px;
}



.logo {
    width: 150px;
    height: auto;
}

/* Hero Section */
#hero-section {
    display: flex;
    flex-direction: column;
    min-height: calc(100vh - 60px);
    padding: 10px 20px;
    background-color: #f4f4f4;
    justify-content: center;
}

.hero-image-container {
    height: 50vh;
    width: 100%;
}

.hero-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 10px;
}

.hero-title {
    font-size: 1.5rem;
    text-transform: uppercase;
    font-weight: 900;
    margin: 10px 0;
}

.hero-description {
    font-size: 1rem;
    margin-bottom: 20px;
    max-width: 600px;
    color:#575555;
}

/* About Us Section */
#about-us {
    display: flex;
    flex-direction: column;
    padding: 20px;
    background-color: #cbe0fe;
    align-items: center;
}

#about-us h2 {
    text-align: center;
    font-weight: 900;
    margin: 0;
}

#about-us p {
    margin: 10px auto;
    line-height: 1.6;
    max-width: 600px;
}

/* Services Section */
#our-services {
    padding: 20px;
    background-color: #f4f4f4;
}

.card {
    width: 100%;
    max-width: 400px;
    margin: 20px auto;
    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
    border-radius: 10px;
    transition: transform .3s ease, box-shadow .3s ease;
}

.card:hover {
    transform: translateY(-5px);
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
}

.card img {
    width: 100%;
    height: auto;
    border-radius: 10px;
}

.card-content {
    padding: 15px;
}

#our-services h2 {
    font-weight: 900;
    text-align: center;
}

#our-services h3 {
    font-size: 1.3rem;
    margin: 10px 0;
    font-weight: 800;
}

#our-services p {
    margin: 10px 0;
    line-height: 1.6;
    color:#575555;
}

.card button {
    background-color: #0070c0;
    color: #fff;
    border: none;
    padding: 10px 20px;
    font-size: 1rem;
    font-weight: bold;
    cursor: pointer;
    border-radius: 5px;
}

.card button:hover {
    background-color: #005a9e;
    transition: background-color .3s ease;
}

/* Why Choose Us Section */
#why-choose-us {
    padding: 20px;
    background-color: #cbe0fe;
}

#why-choose-us h2 {
    font-weight: 900;
    text-align: center;
}

.testimonial-container {
    max-width: 400px;
    height: auto;
    margin: 20px auto;
    text-align: center;
}

.customer1, .customer3 {
    display: none;
}

.testimonial-container img {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    margin-bottom: 10px;
    object-fit: cover;
}

/* Contact Us Section */
#contact {
    padding: 20px;
    background-color: #f4f4f4;
}

#contact h2 {
    font-weight: 900;
    text-align: center;
}

#contact h3 {
    font-size: 1.3rem;
    margin: 10px 0;
    font-weight: 800;
}

#contact p {
    margin: 10px 0;
    line-height: 1.6;
    color:#575555;
}

#contact form {
    margin: 20px auto;
    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
    padding: 20px;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
}

#contact form .form-group {
    margin-bottom: 15px;
    display: flex;
    flex-direction: column;
}

#contact form label {
    margin-bottom: 5px;
    font-weight: 500;
}

#contact form input, #contact form textarea {
    padding: 10px;
    border: 1px solid #ddd;
    border-radius: 5px;
    font-size: 1rem;
}

#contact form button {
    background-color: #0070c0;
    color: #fff;
    border: none;
    padding: 10px 20px;
    font-size: 1rem;
    font-weight: bold;
    cursor: pointer;
    border-radius: 5px;
    width: 200px;
    align-self: center;
}

#contact form button:hover {
    background-color: #005a9e;
    transition: background-color .3s ease;
}

/* Footer Section */
footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 12px;
    padding: 20px 20px 40px;
    background-color: #cbe0fe;
}

footer img {
    width: 120px;
}

footer p {
    text-align: center;
}

/*footer .bottom {
    position: absolute;
    bottom: 0;
    text-align: center;
}*/

.socials-icon-container {
    text-align: center;
}

.socials-icon-container .icons {
    width: 30px;
    margin: 10px auto;
}

/*media queries for responsiveness */

/*tablet*/
@media (min-width: 768px) {
    /*header*/
    img.hamburger-menu {
        display: none;
    }

    .nav-bar {
        display: flex;
        justify-content: space-around;
    }

    .nav-links {
        display: flex;
        gap: 15px;
        list-style: none;
    }

    .nav-links li {
        font-weight: 500;
        font-size: 1.1rem;
    }

    .nav-links li a{
    text-decoration: none;
    color: #0070c0;
    transition: all 0.3s ease;
    }

    .nav-links li a:hover {
        color: #0070c0;
        text-decoration: underline;
        text-underline-offset: 8px;
        transition: all 0.3s ease;
    }
}

